Take what a count is short of from the sets it is taken of
A set the walk finds is cut down to the blocks whose values are written
down, and two of them can be cut down to one: a set of blocks all stated
to differ, beside two blocks nothing wrote the values of, is two sets
that leave one. Asked once per set the walk found, that is one question
asked twice — and what came back was one lack claimed twice, which a
reader of an argument's lacks is told is not a thing that happens.

So each lack once, told by what it claims. Told by the blocks the count
was taken of instead, the telling is a set of blocks put where its own
number is read, and the sets one relation is short of are subsets of the
same few blocks: on the shape that has the most of them, that is what a
reduction costs rather than a part of it.

And a refusal is what it was refused at beside what it was refused about,
either of which may be nothing. A conjunction refused at a block on one
side and about blocks together on the other is refused both ways, and
neither is what it is instead of the other — held as one of three things,
such a conjunction gave one of them up, and what three sides come to was
then not the same when the first two were put together first as when the
last two were. Both ways of putting refusals together now do the same
thing to each half, and which sentence a report writes is asked of the
whole refusal rather than settled by which half a fold left standing.

Which is what a conjunction of factors now asks for, in place of keeping
the first collective lack the factors happened to be read in the order
of. And the removals a report walks back through are filed under the
block each was taken from, so a relation whose blocks were all emptied at
once is reported on by asking each of them rather than by reading every
removal once per block.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>